tests/baselines/reference/typeofSimple.errors.txt
==== tests/cases/compiler/typeofSimple.ts (2 errors) ====
    var v = 3;
    var v2: typeof v;
    var v3: string = v2; // Not assignment compatible
        ~~~~~~~~~~~~~~~
!!! typeofSimple.ts(3,5): error TS2011: Cannot convert 'number' to 'string'.
    
    interface I<T> { x: T; }
    interface J { }
    
    var numberJ: typeof J; //Error, cannot reference type in typeof
                        ~
!!! typeofSimple.ts(8,21): error TS2095: Could not find symbol 'J'.
    var numberI: I<typeof v2>;
    
    var fun: () => I<number>;
    numberI = fun();